Add comment for running on OpenJDK